# fz_connect

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
fz_connect/: hooks.py  modules.txt
fz_connect/fz_connect/doctype/daily_ticket_details/: daily_ticket_details.js  daily_ticket_details.json  daily_ticket_details.py  test_daily_ticket_details.py
fz_connect/fz_connect/doctype/payout_to_mahajan/: payout_to_mahajan.js  payout_to_mahajan.json  payout_to_mahajan.py  test_payout_to_mahajan.py
fz_connect/fz_connect/doctype/prize_pt_vc/: prize_pt_vc.json  prize_pt_vc.py
fz_connect/fz_connect/doctype/received_money/: received_money.js  received_money.json  received_money.py  test_received_money.py
fz_connect/fz_connect/doctype/sold_ticket_details/: sold_ticket_details.json  sold_ticket_details.py
fz_connect/fz_connect/doctype/unsold_ticket_details/: unsold_ticket_details.json  unsold_ticket_details.py
